0.8.88.8
  Add "Count Items" servo instruction. Counts the number of items the servo's holding.
  Add "Read Redstone" servo instruction. Gets the redstone signal on the block the servo is pointing at.

0.8.88.7
  A copy of this changelog is now located INSIDE the mod itself! Whoah! It's like a whole new mod!
  They told me not to feed the Greg. I fed the Greg. Hopefully there won't be any strange consequences?

0.8.88.6
  Hopefully made the pocket crafting table less laggy

0.8.88.5
  Hopefully fixed AT verifier issues

0.8.88.4
  Just polishing & bugfixing.
  Goo:
    Shifting goo into the void will return it to you; use this to recover goo that is inconvenient to break
    Goo now expands twice as quickly, and punching it removes a larger area
    Using goo in creative mode should behave better
    Creative-mode players can spread goo up to 1024 blocks
    Fixed z-fighting at certain camera angles
    Shows a bounding box in the tool tip

  Screwpump:
    Clicking on a screwpump with a fluid container will drain its buffer into the container
    Pumps faster
    Uses a bit less power
    No longer floods for free
    
  Sculptures:
    High-fired sculptures that were glazed with a block that was since removed (or with those old glaze textures) can have a new glaze applied for free
    Raw glazes have colors that are actually random rather than just varying shades of red.

  The nametag buff can no longer be applied infinitely
  Shift-clicking an otherwise blank servo rail with an LMP will remove the color
  
0.8.88.3
  Screw pump's max pump height is now 12 instead of 7
  Better format for the half-hour time reminders

0.8.88.2
  Barrels don't break in creative mode, unless you shift-punch.
  Barrels don't render the item count if the item count is 1.
  Fix horrific infinite steam bug
  It is I who did the half-hour time reminders! They can be turned off now!

0.8.88.1
  Bunch of bug fixes & polishes:
    socket shifter checks redstone properly