@@ -96,3 +96,5 @@ camo/mutation blocks: when it gets drawn, iterates through the tessellator & rep
 
   0 [Wed Oct 15 03:00:00 PDT 2014] click on villager/NPCs w/ held lead to give them pets?
 
+  0 [Thu Nov 13 23:14:37 PST 2014] add workarounds for recipe conflicts? LMP + whatever to re-craft?
+
