@@ -57,6 +57,7 @@ public net.minecraft.world.storage.MapStorage field_75749_b
 public net.minecraft.world.storage.MapStorage field_75750_c
 
 #net.minecraft.client.Minecraft.rightClickDelayTimer
+#net.minecraft.client.Minecraft.leftClickCounter
 #Needed for use with clicking event handlers
 public net.minecraft.client.Minecraft field_71467_ac
-
+public net.minecraft.client.Minecraft field_71429_W
